bagusin bug di ai

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 GEMINI_API_KEY=AIzaSyBVy-c7IgcVc2Vmb2zfJSs9I-jfRs49W_M
 DB_HOST=localhost
-DB_PORT=3306
+DB_PORT=3306    
 DB_USER=root
 DB_PASSWORD=""
-DB_NAME=chat_db
+DB_NAME=karbon_db
