membuat ci dan cd

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-GEMINI_API_KEY=AIzaSyBVy-c7IgcVc2Vmb2zfJSs9I-jfRs49W_M
-DB_HOST=localhost
-DB_PORT=3306    
-DB_USER=root
-DB_PASSWORD=""
-DB_NAME=karbon_db
+GEMINI_API_KEY="AIzaSyBVy-c7IgcVc2Vmb2zfJSs9I-jfRs49W_M"
+DB_HOST="db-karbon.chg6g80ew60x.us-east-1.rds.amazonaws.com"
+DB_PORT="3306"   
+DB_USER="root"
+DB_PASSWORD="27Mei2004**"
+DB_NAME="db_karbon"
+JWT_SECRET_KEY="mikael123"
